<resources>
    <string name="app_name">RUCafe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_donut">Donut</string>
    <string name="home_coffee">Coffee</string>
    <string name="home_basket">Basket</string>
    <string name="home_shoplist">Shop List</string>
    <string name="coffee_title">Coffee</string>
    <string name="coffee_sizes_title">Sizes:</string>
    <string name="coffee_sizes_small">Small</string>
    <string name="coffee_sizes_tall">Tall</string>
    <string name="coffee_sizes_grande">Grande</string>
    <string name="coffee_sizes_venti">Venti</string>
    <string name="coffee_quantity">Quantity:</string>
    <string name="coffee_add_ins_title">Add-Ins:</string>
    <string name="coffee_add_ins_sweet_cream">Sweet Cream</string>
    <string name="coffee_add_ins_french_vanilla">French Vanilla</string>
    <string name="coffee_add_ins_irish_cream">Irish Cream</string>
    <string name="coffee_add_ins_caramel">Caramel</string>
    <string name="coffee_add_ins_mocha">Mocha</string>
    <string name="coffee_total">Total:</string>
    <string name="coffee_add_to_order">Add to Order</string>
    <string name="donut_header">Donuts</string>
    <string name="add_donut">Add Donut</string>
    <string name="home_header">RU Cafe</string>
    <string name="add_order">Add to Order</string>
    <string name="subtotal">Subtotal:</string>
    <string name="tax">Tax:</string>
    <string name="total">Total:</string>
    <string name="order_add">Add Order</string>
    <string name="shop_list_title">Shop List</string>
</resources>