<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="356dp"
            android:layout_height="157dp"
            android:layout_marginTop="60dp"
            android:background="#E8F19B"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="300dp"
            android:layout_height="31dp"
            android:layout_marginBottom="14dp"
            android:text="@string/donut_header"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/recycler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Spinner
            android:id="@+id/quantity"
            android:layout_width="157dp"
            android:layout_height="57dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12dp"
            android:background="#EDD99B"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler" />

        <Button
            android:id="@+id/add_donut"
            android:layout_width="166dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/add_donut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.035"
            app:layout_constraintStart_toEndOf="@+id/quantity"
            app:layout_constraintTop_toBottomOf="@+id/recycler" />

        <ListView
            android:id="@+id/donut_listview"
            android:layout_width="358dp"
            android:layout_height="115dp"
            android:background="#A4E8F1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_donut"
            app:layout_constraintVertical_bias="0.069" />

        <TextView
            android:id="@+id/donut_tprice"
            android:layout_width="240dp"
            android:layout_height="38dp"
            android:layout_marginTop="24dp"
            android:background="#F3AFC6"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/donut_listview"
            app:layout_constraintVertical_bias="0.048" />

        <Button
            android:id="@+id/donut_order_button"
            android:layout_width="241dp"
            android:layout_height="60dp"
            android:text="@string/add_order"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/donut_tprice" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>